frontend/test/should_fail/defYield_002.grg
using defYield;

test t
{
	pp:p(--- yield x);
	if { outgoing(x).size()>=1 || typeof(x)>Node || set<Node>{ x,x }.size()<=1; }
---
	def x:Node;
}

pattern p(--- def x:Node)
{
	y:Node;
---
	yield { yield x = y; }
}

